--- a/Plugin/src/GstUnityBridge.vcxproj
+++ b/Plugin/src/GstUnityBridge.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -201,6 +201,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gub.h" />
+    <ClInclude Include="Unity\IUnityGraphics.h" />
+    <ClInclude Include="Unity\IUnityGraphicsD3D11.h" />
+    <ClInclude Include="Unity\IUnityGraphicsD3D12.h" />
+    <ClInclude Include="Unity\IUnityGraphicsD3D9.h" />
+    <ClInclude Include="Unity\IUnityGraphicsMetal.h" />
+    <ClInclude Include="Unity\IUnityInterface.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\readme_plugin.txt" />
